--- a/rssac-047.mkd
+++ b/rssac-047.mkd
@@ -7,7 +7,6 @@ The purpose of this document is to mark all text that might be linked to the sou
 The text of this document is basically what is in RSSAC047, but tags are added in every place that something from RSSAC047 might affect implementation.
 All tags are given as `[xyz]`, where "xyz" is a unique, randomly selected three-letter string. That same `[xyz]` will appear in the implementation code or other documents.
 
-
 ## Preface
 
 {{ elided }}
@@ -102,41 +101,23 @@ In some cases, queries and responses for one measurement are used in more than o
 
 When the collection system observes unexpected measurements or metrics, they may warrant further investigation. Examples of unexpected results may include very high response latency to some or all instances of an RSI, DNSSEC validation failures, and excessive staleness. Investigation and publication of unexpected results is most likely in the best interest of affected parties to understand the reasons for and, if possible, rectify situations that lead to such results.
 
-To aid in debugging unexpected results, all DNS query measurements shall include the Name Server Identifier Option (NSID) option. Furthermore, vantage points shall record the network route to both IPv4 and IPv6 addresses of each RSI, in every measurement interval, using commonly available tools such as traceroute, tracepath, or mtr. This additional information helps diagnose issues with the monitoring system (for example, if a route local to the monitoring system disappears it will show up in traceroute). The collection and storage of the extra debugging information is not the primary purpose of the vantage point and must not cause interruption or disturbance to measurement gathering. 
+To aid in debugging unexpected results, all DNS query measurements shall include the Name Server Identifier Option (NSID) option. `[mgj]` Furthermore, vantage points shall record the network route to both IPv4 and IPv6 addresses of each RSI, in every measurement interval, using commonly available tools such as traceroute, tracepath, or mtr. `[vno]` This additional information helps diagnose issues with the monitoring system (for example, if a route local to the monitoring system disappears it will show up in traceroute). The collection and storage of the extra debugging information is not the primary purpose of the vantage point and must not cause interruption or disturbance to measurement gathering. 
 
-If, in the course of collecting and aggregating the measurements from the vantage points, one or more vantage points is clearly impacted by a software or network failure, the collection system can temporarily exclude those vantage points from the threshold calculations. Any such exclusion needs to be described publicly, and the times that the vantage points' data is excluded be clearly stated.
+If, in the course of collecting and aggregating the measurements from the vantage points, one or more vantage points is clearly impacted by a software or network failure, the collection system can temporarily exclude those vantage points from the threshold calculations. `[raz]` Any such exclusion needs to be described publicly, and the times that the vantage points' data is excluded be clearly stated. `[hnr]`
 
-The collection system can also exclude some measurements from threshold calculations if the RSO can give a reasonable explanation for temporary technical problems that caused a failure to meet a threshold. Any such exclusion needs to be described publicly, and the times that the data is excluded be clearly stated.
+The collection system can also exclude some measurements from threshold calculations if the RSO can give a reasonable explanation for temporary technical problems that caused a failure to meet a threshold. `[xjv]` Any such exclusion needs to be described publicly, and the times that the data is excluded be clearly stated. `[dew]`
 
-The collection system is allowed to remove vantage points that are not acting in accordance with the goals of measurement.
+The collection system is allowed to remove vantage points that are not acting in accordance with the goals of measurement. `[ahh]`
 
-RSOs can ask the collection system that anomalies be annotated with information detailing the reason for an outage, or a notice of preventative maintenance.
+RSOs can ask the collection system that anomalies be annotated with information detailing the reason for an outage, or a notice of preventative maintenance. `[bmu]`
 
 ### 4.9 Determining the Number of RSIs Required for Reliable Operation of the RSS
 
-While developing the metrics and thresholds for availability, the RSSAC found it helpful to apply a “k-out-of-n system model” to the RSS.10 This model has, as a design parameter, the value of k representing the number of components required for the whole system to function. One example of this is a multi-engine airplane that can continue flying when one (or more) engine stops working. Another example is a communications system with multiple transmitters that would lose critical messages under average load if too many transmitters fail.
-
-The k-out-of-n model as applied here requires some simplifying assumptions. One such assumption is that all components (e.g., RSIs) are identical. Another is that IPv4 service is identical to IPv6 service. Another assumption is that all components are independent and that the failure of one does not increase the load for any other. While none of these assumptions hold for the RSS, taking them into consideration would significantly complicate the model and the math used in predicting availability.
-
-Prior to recommending availability thresholds, the RSSAC first needed to determine the value of k for a value of n. In our discussions, we settled on the following formula:
-
-k=⌈2/3(n-1)⌉
-
-Which means that when a resolver’s initial query results in a timeout, a subsequent query to a different RSI has at least a two-thirds chance of being successful.
-
-For the current RSS, where n=13, this formula results in a value of k=8. The chart below shows the values of k for other values of n.
-
-{{ chart elided }}
-
-The reader might wonder why k=1 is not sufficient for reliable operation of the RSS, since for any given query, a resolver needs only one response from any one of the RSIs. It is true that, from the viewpoint of the user, if the RSS returns a response, then the system is available. However, that interpretation of availability is less useful to service providers, for whom these metrics are designed. From the viewpoint of service providers, multiple RSIs must be operational at any given time in order to provide reliable service. The formula above determines the number required for reliable operation based on the total number of RSIs. 
-
-Furthermore, keep in mind that RSIs have different anycast deployment policies. The requirement of k=8 for reliable operation (of the current system) reflects the number of RSIs reachable by the vantage points, which is different than the number of anycast instances that may be operating. For a value of k=8 there are likely to be anywhere from 200 to 1000 instances in operation, based on anycast deployments known at the time of this report’s publication. The different anycast deployment policies reflect the diversity among RSIs, which is an important characteristic of the RSS. Nothing in this report should be seen as an attempt to measure or quantify the way in which RSOs operate their systems with respect to anycast.
+{{ elided }}
 
 ### 4.10 Potential Effects of Metrics on Independence and Diversity
 
-Independence and diversity have been guiding principles for the RSOs since the group’s inception. The various manifestations and benefits of RSO independence are outlined in RSSAC042.11 While developing the metrics and thresholds in this report, a number of participants emphasized the importance of maintaining such independence and diversity.
-
-To some readers, the thresholds provided in this report may appear to be overly generous. The metrics and thresholds herein have been designed and chosen carefully, with the principles of independence and diversity in mind. It is not the RSSAC’s intention that the implementation and publication of these metrics should encourage an RSO to forfeit its independence, or otherwise change its deployment strategies. Evidence of this occurring may require the metrics and thresholds to be revised in the future.
+{{ elided }}
 
 ## 5 Root Server Identifier-Related Metrics
 
@@ -153,27 +134,27 @@ The purpose of these metrics is to characterize the availability of a single RSI
 
 In accordance with the recommendations in this report, it is likely that vantage points will be placed inside data centers some distance away from root server instances. The queries and responses between vantage point and instance traverse through some number of networks, routers, and switches. These intermediate network components, which are not necessarily under an RSO’s control, also factor into the availability measurements. That is, the availability of an RSI at a particular point in time depends not only on the RSI itself, but on the availability of the intermediate networks as well.
 
-Measurements. Measurements shall be made by sending DNS queries of type SOA with QNAME=”.” at five-minute intervals over each of the transports and address types to the root server addresses. 
+__Measurements.__ Measurements shall be made by sending DNS queries of type SOA with QNAME=”.” `[hht]` at five-minute intervals `[mba]` over each of the transports and address types `[jhb]` to the root server addresses `[yns]`. 
 
-Measurements shall use a timeout value of four seconds.
+Measurements shall use a timeout value of four seconds. `[ywz]`
 
-For a response with RCODE=0 received within the timeout value, the RSI is considered to have been available over that transport and address. After the timeout value, the query is considered to be timed out and the RSI is considered to have been unavailable over that transport and address. Timed out queries shall not be retried. Since the query should always result in an RCODE=0 response, responses with any other RCODE are considered to be equivalent to a timeout.
+For a response with RCODE=0 received within the timeout value, the RSI is considered to have been available over that transport and address. After the timeout value, the query is considered to be timed out and the RSI is considered to have been unavailable over that transport and address. `[yve]` Timed out queries shall not be retried. `[xyl]` Since the query should always result in an RCODE=0 response, responses with any other RCODE are considered to be equivalent to a timeout. `[ppo]`
 
-For every measurement, the vantage point also records the time elapsed between sending the query and receiving the response. This measurement is also used for the measurements in “5.2 RSI Response Latency” and “5.4 RSI Publication Latency.”
+For every measurement, the vantage point also records the time elapsed between sending the query and receiving the response. `[aym]` This measurement is also used for the measurements in “5.2 RSI Response Latency” and “5.4 RSI Publication Latency.” `[wdo]`
 
-Aggregation. All of the measurements for each transport and address type, from all vantage points, covering a period of one month are aggregated with the other measurements from the same transport and address type. Availability is calculated as the number of non-timed-out and non-error responses received divided by the number of queries sent, expressed as a percentage.
+__Aggregation.__ All of the measurements for each transport and address type, from all vantage points, covering a period of one month are aggregated with the other measurements from the same transport and address type. `[gfa]` Availability is calculated as the number of non-timed-out and non-error responses received divided by the number of queries sent, expressed as a percentage. `[yah]`
 
-Precision. The number of aggregated measurements shall convey the metric’s precision.
+__Precision.__ The number of aggregated measurements shall convey the metric’s precision. `[lkd]`
 
-Reporting. For each month, the report shall state whether or not each of the aggregated availability metrics meets or does not meet the established threshold.
+__Reporting.__ For each month, the report shall state whether or not each of the aggregated availability metrics meets or does not meet the established threshold. `[vmx]`
 
-Threshold. The recommended threshold for this metric is 96%. The recommended threshold value was determined by using the formula for simple k-out-of-n parallel availability:
+__Threshold.__ The recommended threshold for this metric is 96%. `[ydw]` The recommended threshold value was determined by using the formula for simple k-out-of-n parallel availability:
 
 {{ formula elided }}
 
 Given a desired overall system availability of A=99.999% (“five nines”), n = 13, and k = 8, this formula tells us that an individual RSI availability of a = 96 is necessary to meet the desired system availability.
 
-If the number of RSIs were to change in the future, this threshold may need to be adjusted. The chart below shows the relationship between values of A,a, and n when k=⌈(n-1)*2/3⌉. Note that as the number of RSIs increases, the threshold for RSI availability decreases.
+If the number of RSIs were to change in the future, this threshold may need to be adjusted. `[dlw]` The chart below shows the relationship between values of A,a, and n when k=⌈(n-1)*2/3⌉. Note that as the number of RSIs increases, the threshold for RSI availability decreases.
 
 {{ chart elided }}
 
@@ -186,15 +167,15 @@ The purpose of these metrics is to characterize the response latency for a singl
 - IPv6 UDP Response Latency
 - IPv6 TCP Response Latency
 
-Measurements. Measurements are taken from timing of queries and responses made for Section 5.1 "RSI Availability.” Timed-out queries are not utilized in this metric.
+__Measurements.__ Measurements are taken from timing of queries and responses made for Section 5.1 "RSI Availability.” Timed-out queries are not utilized in this metric.
 
-Aggregation. All of the measurements for each transport and address type, from all vantage points, covering a period of one month are aggregated with the other measurements from the same transport and address type. Response latency is calculated as the median value of the aggregated latency measurements. 
+__Aggregation.__ All of the measurements for each transport and address type, from all vantage points, covering a period of one month are aggregated with the other measurements from the same transport and address type. Response latency is calculated as the median value of the aggregated latency measurements. 
 
-Precision. The number of aggregated measurements shall convey the metric’s precision.
+__Precision.__ The number of aggregated measurements shall convey the metric’s precision.
 
-Reporting. For each month, the report shall state whether or not each of the aggregated median response latency metrics meets or does not meet the established threshold.
+__Reporting.__ For each month, the report shall state whether or not each of the aggregated median response latency metrics meets or does not meet the established threshold.
 
-Threshold. The recommended threshold for this metric is 250 milliseconds for UDP and 500 milliseconds for TCP. 
+__Threshold.__ The recommended threshold for this metric is 250 milliseconds for UDP and 500 milliseconds for TCP. 
 
 The threshold for TCP is twice that for UDP due to TCP connection setup latencies.
 
@@ -208,7 +189,7 @@ The individual measurement responses will be marked either correct or incorrect.
 
 The RSSAC recognizes that there are limitations to this metric because the vantage points are measuring a small number of root server instances, from known source IP addresses, with no detection of on-path attackers. Another potential limitation may arise in cases when root server instances are started up with older versions of the zone saved on disk. Typically, when name servers start up they will use any saved zone data and then quickly check for a newer version from the master server. If a correctness query happens during this short window of time between startup and zone refresh, stale data may be returned. Future improvements in the measurement system may address these and other concerns.
 
-Measurements. Measurements shall be made by sending DNS queries at five-minute intervals to the RSIs. In each interval the transport and address type used for a particular measurement shall be chosen with uniform random probability among all combinations of IPv4/IPv6 and UDP/TCP. In order to test a variety of responses, the query name and type for a particular measurement are chosen at random as described below.
+__Measurements.__ Measurements shall be made by sending DNS queries at five-minute intervals to the RSIs. In each interval the transport and address type used for a particular measurement shall be chosen with uniform random probability among all combinations of IPv4/IPv6 and UDP/TCP. In order to test a variety of responses, the query name and type for a particular measurement are chosen at random as described below.
 
 For all queries, the DNSSEC OK bit is always set, and the EDNS0 buffer size is set to 1220 when using UDP.
 
@@ -312,11 +293,11 @@ For negative responses, a correct result requires all of the following:
 
 - The Additional section is empty.
 
-Aggregation. All of the measurements covering a period of one month are aggregated together. Correctness is calculated as the number of correct responses received divided by the total number of responses received, expressed as a percentage.
+__Aggregation.__ All of the measurements covering a period of one month are aggregated together. Correctness is calculated as the number of correct responses received divided by the total number of responses received, expressed as a percentage.
 
-Precision. The number of aggregated measurements shall convey the metric’s precision.
+__Precision.__ The number of aggregated measurements shall convey the metric’s precision.
 
-Reporting. For each month, the report shall state whether or not the RSI’s aggregated correctness meets or does not meet the established threshold.
+__Reporting.__ For each month, the report shall state whether or not the RSI’s aggregated correctness meets or does not meet the established threshold.
 
 Thresholds. The recommended threshold for this metric is 100%. The expectation is that root name servers always serve correct responses.
 
@@ -328,7 +309,7 @@ The purpose of this metric is to characterize the publication latency for a sing
 
 The publication latency metric may also be affected by the situation described in Section 5.3, when name servers first start up with older zone data before the zone has been refreshed from the master server.
 
-Measurements. The metrics are based on the amount of time between publication of a new root zone serial number, and the time the new serial number is observed by each vantage point over all of the transports and address types for each RSI. Rather than make additional SOA queries, this metric reuses the root zone SOA responses received from the response latency measurements from Section 5.2.
+__Measurements.__ The metrics are based on the amount of time between publication of a new root zone serial number, and the time the new serial number is observed by each vantage point over all of the transports and address types for each RSI. Rather than make additional SOA queries, this metric reuses the root zone SOA responses received from the response latency measurements from Section 5.2.
 
 In each measurement interval, the collection system examines the response latency measurements and calculates the minimum SOA serial value over all of the transports and address types for each vantage point and RSI. This is because the RSI might return different SOA serials over UDP/TCP and IPv4/IPv6. Timed out and bogus responses must not be used in this calculation.
 
@@ -336,13 +317,13 @@ The collection system needs to know, approximately, when new zones are published
 
 The collection system then calculates the amount of time elapsed until a given vantage point observes the new serial number in a response from the RSI. Note that this will always be a multiple of five minutes. For vantage points that observe the new serial number in the same interval as the root zone publication time, the publication latency shall be recorded as zero minutes.
 
-Aggregation. All of the measurements, from all vantage points, covering a period of one month are aggregated together. Publication latency is calculated as the median value of the aggregated latency measurements.
+__Aggregation.__ All of the measurements, from all vantage points, covering a period of one month are aggregated together. Publication latency is calculated as the median value of the aggregated latency measurements.
 
 Note that the number of aggregated measurements depends on the number of root zones published in the aggregation interval. Most commonly there are two root zones published each day, which would result in at least approximately “sixty times the number of vantage points” measurements each month for each RSI. 
 
-Precision. The number of aggregated measurements shall convey the metric’s precision.
+__Precision.__ The number of aggregated measurements shall convey the metric’s precision.
 
-Reporting. For each month, the report shall state whether or not each of the aggregated publication latency metrics meets or does not meet the established threshold.
+__Reporting.__ For each month, the report shall state whether or not each of the aggregated publication latency metrics meets or does not meet the established threshold.
 
 Thresholds. The recommended threshold for this metric is 65 minutes. This is based on twice the value of the SOA refresh parameter (which is 30 minutes) plus one five-minute measurement interval. Note that the Root Zone Maintainer’s current distribution system sends out DNS NOTIFY messages from many different locations, to a set of addresses provided by each RSO. Even in situations where NOTIFY messages may not be reliably delivered, the RSO’s systems should be polling for zone updates at least every SOA refresh interval (30 minutes).
 
@@ -361,7 +342,7 @@ This metric is derived from the set of RSI availability measurements described i
 - IPv6 UDP Availability
 - IPv6 TCP Availability
 
-Aggregation. For each transport and address type, in each measurement interval t, and for each vantage point v, calculate r_(t,v)  as the number of RSIs that responded to an availability query (section 5.1). The aggregated RSS availability (for each transport and address type) A is then:
+__Aggregation.__ For each transport and address type, in each measurement interval t, and for each vantage point v, calculate r_(t,v)  as the number of RSIs that responded to an availability query (section 5.1). The aggregated RSS availability (for each transport and address type) A is then:
 
 {{ equation elided }}
 
@@ -380,9 +361,9 @@ A 24-hour attack takes out all RSIs entirely. | 96.66% | 29/30
 In one five-minute interval, one vantage point can only reach seven RSIs. | 99.99992% | ((288*30*20*8)-1)/(288*30*20*8)
 For two intervals, seven vantage points can reach no RSIs. | 99.9989% | ((288*30*20*8)-14)/(288*30*20*8)
 
-Precision. The number of aggregated measurements shall convey the precision.
+__Precision.__ The number of aggregated measurements shall convey the precision.
 
-Reporting. For each month, the report shall include the aggregated RSS Availability values for each transport and address type, and whether each meet, or does not meet the established threshold(s).
+__Reporting.__ For each month, the report shall include the aggregated RSS Availability values for each transport and address type, and whether each meet, or does not meet the established threshold(s).
 
 Thresholds. The recommended threshold for this metric is 99.999%, based on the rationale for the RSI availability threshold in Section 5.1.
 
@@ -397,13 +378,13 @@ Since the individual RSI response latency measurements are sent over specific tr
 - IPv6 UDP Response Latency
 - IPv6 TCP Response Latency
 
-Measurements. In this method, the metric is derived from the set of RSI response latency measurements described in Section 5.1. 
+__Measurements.__ In this method, the metric is derived from the set of RSI response latency measurements described in Section 5.1. 
 
-Aggregation. In each five-minutes measurement interval, find the best k RSI response latencies for each vantage point and for each transport and address type. The aggregated response latency is calculated as the median value of the subset of lowest latencies. 
+__Aggregation.__ In each five-minutes measurement interval, find the best k RSI response latencies for each vantage point and for each transport and address type. The aggregated response latency is calculated as the median value of the subset of lowest latencies. 
 
-Precision. Measurement Count shall be presented to convey the measurement range and precision.
+__Precision.__ Measurement Count shall be presented to convey the measurement range and precision.
 
-Reporting. For each month, the report shall include the aggregated RSS Response Latency values for each transport and address type, and whether each meet, or does not meet the established threshold(s).
+__Reporting.__ For each month, the report shall include the aggregated RSS Response Latency values for each transport and address type, and whether each meet, or does not meet the established threshold(s).
 
 Thresholds. The recommended threshold for this metric is 150 milliseconds for UDP and 300 milliseconds for TCP. 
 
@@ -415,11 +396,11 @@ The metric is derived from the set of individual RSI correctness measurements de
 
 - Correctness
 
-Aggregation. All of the measurements covering a period of one month are aggregated together. RSS Correctness is calculated as the number of correct responses observed divided by the total number of responses, expressed as a percentage.
+__Aggregation.__ All of the measurements covering a period of one month are aggregated together. RSS Correctness is calculated as the number of correct responses observed divided by the total number of responses, expressed as a percentage.
 
-Precision. The number of aggregated measurements shall convey the precision.
+__Precision.__ The number of aggregated measurements shall convey the precision.
 
-Reporting. For each month, the report shall include the aggregated RSS Correctness values, and whether it meets, or does not meet the established threshold.
+__Reporting.__ For each month, the report shall include the aggregated RSS Correctness values, and whether it meets, or does not meet the established threshold.
 
 Thresholds. The recommended threshold for this metric is 100%. The expectation is that the RSS always serves correct responses.
 
@@ -431,11 +412,11 @@ The metric is derived from the set of individual RSI publication latency measure
 
 - Publication Latency
 
-Aggregation. All of the measurements covering a period of one month are aggregated together. Publication Latency is calculated as the median of the aggregated values.
+__Aggregation.__ All of the measurements covering a period of one month are aggregated together. Publication Latency is calculated as the median of the aggregated values.
 
-Precision. The number of aggregated measurements shall convey the precision.
+__Precision.__ The number of aggregated measurements shall convey the precision.
 
-Reporting. For each month, the report shall include the aggregated Publication Latency values, and whether it meets, or does not meet the established threshold.
+__Reporting.__ For each month, the report shall include the aggregated Publication Latency values, and whether it meets, or does not meet the established threshold.
 
 Thresholds. The recommended threshold for this metric is 35 minutes. This is based on the root zone SOA retry value of 30 minutes, plus one five-minute measurement interval. Note that the RSS publication latency threshold is lower than the RSI publication latency threshold because we do not expect that a majority of RSIs to be close to the individual threshold at the same time.
 
